[package]
name = "grrs_command"
version = "0.1.0"
edition = "2021"
[lib]
name = "grrs_command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = {version="1.0", default-features=false}
log = {version="0.4", features=["std"]}
