[package]
name = "grrs_command"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple grep command written in Rust"

[lib]
name = "grrs_command"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow_ext = {version = "0.2"}